test/libsolidity/syntaxTests/inlineAssembly/invalid/push_disallowed.sol
contract C {
    function f() pure public {
        assembly {
            push0()
            push1()
            push2()
            push3()
            push4()
            push5()
            push6()
            push7()
            push8()
            push9()
            push10()
            push11()
            push12()
            push13()
            push14()
            push15()
            push16()
            push17()
            push18()
            push19()
            push20()
            push21()
            push22()
            push23()
            push24()
            push25()
            push26()
            push27()
            push28()
            push29()
            push30()
            push31()
            push32()
        }
    }
}
// ----
// DeclarationError 4619: (75-80): Function not found.
// TypeError 5017: (95-100): The identifier "push1" is reserved and can not be used.
// TypeError 5017: (115-120): The identifier "push2" is reserved and can not be used.
// TypeError 5017: (135-140): The identifier "push3" is reserved and can not be used.
// TypeError 5017: (155-160): The identifier "push4" is reserved and can not be used.
// TypeError 5017: (175-180): The identifier "push5" is reserved and can not be used.
// TypeError 5017: (195-200): The identifier "push6" is reserved and can not be used.
// TypeError 5017: (215-220): The identifier "push7" is reserved and can not be used.
// TypeError 5017: (235-240): The identifier "push8" is reserved and can not be used.
// TypeError 5017: (255-260): The identifier "push9" is reserved and can not be used.
// TypeError 5017: (275-281): The identifier "push10" is reserved and can not be used.
// TypeError 5017: (296-302): The identifier "push11" is reserved and can not be used.
// TypeError 5017: (317-323): The identifier "push12" is reserved and can not be used.
// TypeError 5017: (338-344): The identifier "push13" is reserved and can not be used.
// TypeError 5017: (359-365): The identifier "push14" is reserved and can not be used.
// TypeError 5017: (380-386): The identifier "push15" is reserved and can not be used.
// TypeError 5017: (401-407): The identifier "push16" is reserved and can not be used.
// TypeError 5017: (422-428): The identifier "push17" is reserved and can not be used.
// TypeError 5017: (443-449): The identifier "push18" is reserved and can not be used.
// TypeError 5017: (464-470): The identifier "push19" is reserved and can not be used.
// TypeError 5017: (485-491): The identifier "push20" is reserved and can not be used.
// TypeError 5017: (506-512): The identifier "push21" is reserved and can not be used.
// TypeError 5017: (527-533): The identifier "push22" is reserved and can not be used.
// TypeError 5017: (548-554): The identifier "push23" is reserved and can not be used.
// TypeError 5017: (569-575): The identifier "push24" is reserved and can not be used.
// TypeError 5017: (590-596): The identifier "push25" is reserved and can not be used.
// TypeError 5017: (611-617): The identifier "push26" is reserved and can not be used.
// TypeError 5017: (632-638): The identifier "push27" is reserved and can not be used.
// TypeError 5017: (653-659): The identifier "push28" is reserved and can not be used.
// TypeError 5017: (674-680): The identifier "push29" is reserved and can not be used.
// TypeError 5017: (695-701): The identifier "push30" is reserved and can not be used.
// TypeError 5017: (716-722): The identifier "push31" is reserved and can not be used.
// TypeError 5017: (737-743): The identifier "push32" is reserved and can not be used.
